# coral

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: coralConfig.cmake.in
custom-triplets/: clang-toolchain.cmake  x64-linux-clang-asan.cmake  x64-linux-clang-tsan.cmake  x64-linux-clang.cmake  x64-linux-gcc-asan.cmake  x64-linux-gcc-tsan.cmake
examples/: CMakeLists.txt  README.md  example_01.cpp  example_02.cpp  example_03.cpp  vcpkg.json
include/coral/: async_generator.hpp  async_result.hpp  concepts.hpp  generator.hpp  mutex.hpp  nursery.hpp  single_event.hpp  sync_wait.hpp  task.hpp  traits.hpp  when_all.hpp  when_all_complete.hpp  when_any.hpp  when_signal.hpp  when_stopped.hpp
include/coral/detail/: adapter_task.hpp  adaptor_task_helper.hpp  config.hpp  task_awaiter.hpp  traits.hpp
tests/: CMakeLists.txt  all_headers.hpp  helpers.hpp  module2.cpp  scheduler.cpp  scheduler.hpp  test_adapter_task.cpp  test_async_generator.cpp  test_generator.cpp  test_mutex.cpp  test_nursery.cpp  test_single_event.cpp  test_sync_wait.cpp  test_task.cpp  test_traits.cpp  test_when_all.cpp  test_when_all_complete.cpp  test_when_any.cpp  test_when_signal.cpp  test_when_stopped.cpp
vcpkg-overlay-port/: portfile.cmake  usage  vcpkg.json
